--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
 			<artifactId>json-smart</artifactId>
 			<version>2.4.8</version>
 		</dependency>
+		<dependency>
+			<groupId>org.example</groupId>
+			<artifactId>search-academy-project</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
