--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>co.empathy.academy</groupId>
-	<artifactId>search</artifactId>
+	<artifactId>search-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>search</name>
 	<description>Demo project for Spring Boot</description>
