--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
 				<artifactId>jackson-databind</artifactId>
 				<version>2.12.3</version>
 			</dependency>
+		<!-- springdoc ui -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.2</version>
+		</dependency>
 
 	</dependencies>
 
